# represent

./: .coveragerc  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  CHANGELOG.md  LICENSE  MANIFEST.in  README  README.md  dev-requirements.txt  noxfile.py  pyproject.toml  setup.py  tox.ini
.github/workflows/: ci.yml  python-publish.yml
.travis/: upload_coverage.sh
doc/: conf.py  examples.rst  index.rst  installation.rst  module.rst  modules.rst  usage.rst
doc/examples/: automatic.rst  helper.rst
doc/modules/: core.rst  deprecated.rst  helper.rst
doc/usage/: automatic.rst  helper.rst
docs/: conf.py  index.rst
docs/usage/: automatic.rst  helper.rst
newsfragments/: 15.added.md  15.changed.md  15.removed.md
represent/: __init__.py  contextlib.py  core.py  deprecated.py  helper.py  utilities.py
represent/compat/: contextlib.py
represent/tests/: test_helper.py  test_mixin.py
shovel/: doc.py  version.py
src/represent/: __init__.py  core.py  helper.py  utilities.py
tests/: test_autorepr.py  test_deprecated.py  test_helper.py  test_mixin.py
