[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "Represent"
version = "1.6.0.post0"
description = "Create __repr__ automatically or declaratively."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "Frazer McLean", email = "frazer@frazermclean.co.uk" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Repository = "https://github.com/RazerM/represent"
Documentation = "https://represent.readthedocs.io"

[project.optional-dependencies]
test = [
    "ipython",
    "pytest",
]
docstest = [
    "parver",
    "sphinx",
    "furo",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.coverage.run]
branch = true
source = ["represent", "tests/"]

[tool.coverage.paths]
source = ["represent", ".tox/*/lib/python*/site-packages/represent"]

[tool.coverage.report]
precision = 1
exclude_lines = ["pragma: no cover", "pass"]
