[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "Represent"
version = "2.1"
description = "Create __repr__ automatically or declaratively."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "Frazer McLean", email = "frazer@frazermclean.co.uk" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Repository = "https://github.com/RazerM/represent"
Documentation = "https://represent.readthedocs.io"

[dependency-groups]
coverage = [
    "coverage[toml]",
]
dev = [
    { include-group = "check-sdist" },
    { include-group = "coverage" },
    { include-group = "docs" },
    { include-group = "nox" },
    { include-group = "ruff" },
    { include-group = "test" },
]
test = [
    "ipython",
    "pytest",
    "rich",
]
docs = [
    "parver",
    "sphinx",
    "furo",
]
check-sdist = [
    "check-sdist",
]
ruff = [
    "ruff",
]
nox = [
    "nox",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.coverage.run]
branch = true
source = ["represent", "tests/"]

[tool.coverage.paths]
source = ["represent", ".tox/*/lib/python*/site-packages/represent"]

[tool.coverage.report]
precision = 1
exclude_lines = ["pragma: no cover", "pass"]

[tool.ruff.lint]
select = [
    "E4", "E7", "E9", "F", # ruff defaults
    "I", # isort
    "UP", # pyupgrade
]

[tool.check-sdist]
git-only = [
    ".gitignore",
]
