[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "Represent"
version = "2.2.0"
description = "Create __repr__ automatically or declaratively."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Frazer McLean", email = "frazer@frazermclean.co.uk" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3.15",
]

[project.urls]
Homepage = "https://github.com/RazerM/represent"
Source = "https://github.com/RazerM/represent"
Documentation = "https://represent.readthedocs.io"
Changelog = "https://github.com/RazerM/represent/blob/main/CHANGELOG.md"

[dependency-groups]
coverage = [
    "coverage[toml]",
]
dev = [
    { include-group = "check-sdist" },
    { include-group = "coverage" },
    { include-group = "docs" },
    { include-group = "nox" },
    { include-group = "ruff" },
    { include-group = "test" },
    { include-group = "towncrier" },
]
test = [
    "ipython",
    "pytest",
    "rich",
]
docs = [
    "parver",
    "sphinx",
    "furo",
]
check-sdist = [
    "check-sdist",
]
ruff = [
    "ruff",
]
nox = [
    "nox",
]
towncrier = [
    "towncrier",
]

[tool.coverage.run]
branch = true
relative_files = true
source = ["represent", "tests/"]
parallel = true

[tool.coverage.report]
precision = 1
exclude_lines = ["pragma: no cover", "pass"]

[tool.ruff.lint]
select = [
    "E4", "E7", "E9", "F", # ruff defaults
    "I", # isort
    "UP", # pyupgrade
]

[tool.towncrier]
filename = "CHANGELOG.md"
directory = "newsfragments"
issue_format = "[#{issue}](https://github.com/RazerM/represent/issues/{issue})"
title_format = "## [{version}](https://github.com/RazerM/represent/releases/tag/{version}) - {project_date}"

[[tool.towncrier.type]]
name = "Added"

[[tool.towncrier.type]]
name = "Changed"

[[tool.towncrier.type]]
name = "Deprecated"

[[tool.towncrier.type]]
name = "Removed"

[[tool.towncrier.type]]
name = "Fixed"

[[tool.towncrier.type]]
name = "Security"
